# SecureCoder

./: .gitignore  LICENSE  README.md  settings.gradle.kts
SecBenchSuite/: README.md  config.yaml  debug_runner.py  pyproject.toml  secbench.yaml
SecBenchSuite/Benchmarks/EditRepair/: dataset.json
SecBenchSuite/DEBUG/: dockertest.py  run_cweval.py
SecBenchSuite/results/cweval/: res_all.json
SecBenchSuite/results/cweval/20251210_140518_openai_gpt-4o-mini/: run_config.yaml
SecBenchSuite/results/cweval/20251223_145406_openai_gpt-4o-mini/: run_config.yaml
SecBenchSuite/results/cweval/20251223_145740_openai_gpt-4o-mini/: run_config.yaml
SecBenchSuite/results/cweval/20251223_151405_openai_gpt-4o-mini/: run_config.yaml
SecBenchSuite/results/cweval/20251223_151640_openai_gpt-4o-mini/: run_config.yaml
SecBenchSuite/results/cweval/20251223_152100_openai_gpt-4o-mini/: run_config.yaml
SecBenchSuite/results/cweval/20251223_152456_openai_gpt-4o-mini/: run_config.yaml
SecBenchSuite/results/cweval/20251223_152747_openai_gpt-4o-mini/: run_config.yaml
SecBenchSuite/results/cweval/20251223_153636_openai_gpt-4o-mini/: run_config.yaml
SecBenchSuite/results/cweval/20251223_153759_openai_gpt-4o-mini/: run_config.yaml
SecBenchSuite/results/cweval/20251223_154304_openai_gpt-4o-mini/: run_config.yaml
SecBenchSuite/results/generated_samples/: sample_20251225_163107_llama3_latest_1.txt  sample_20251225_163533_llama3_latest_1.txt
SecBenchSuite/results/seccodeplt/: generation_results.json
SecBenchSuite/scripts/: analyze_workflow_trace.py  run_editrepair_experiments.py  run_format_experiments.py
SecBenchSuite/src/secbench/: __init__.py  cli.py  config.py
(+2662 files in other folders)
