[project]
name = "secbench"
version = "0.1.0"
description = "Security Benchmark Suite & CLI Orchestrator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
cweval = [
    "fire",
    "natsort",
    "pytest",
    "pytest-xdist",
    "wrapt_timeout_decorator",
    "pytest-timeout",
    "requests",
    "lxml",
    "pyyaml",
    "PyJWT",
    "argon2-cffi",
    "pycryptodome",
    "docker",
    "numpy",
    "p_tqdm",
    "litellm",
    "google-auth",
    "google-generativeai",
    "anthropic[vertex]",
    "boto3",
]

[project.scripts]
secbench = "secbench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/secbench"]

# Configuration for our own tool
[tool.secbench]
security_tools = ["safety", "semgrep"]
